--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   font-family: 'Lato', sans-serif;
