--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
   }
 }
 .content-area {
-  @apply mx-auto h-screen w-screen max-h-screen p-0;
+  @apply h-screen w-screen max-h-screen p-0;
 }
-.scroll-bar::-webkit-scrollbar-thumb{
-  @apply scrollbar-thin scrollbar-thumb-light-green scrollbar-track-bg-color-grey; 
+.scroll-bar::-webkit-scrollbar-thumb {
+  @apply scrollbar-thin scrollbar-thumb-light-green scrollbar-track-bg-color-grey;
   border-radius: 10px;
 }
