Created a Custom recurrence component

--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,9 @@
 .radioActiveClass:checked ~ label {
   @apply font-bold text-black;
 }
+.dayCustomStyle span:nth-child(even) {
+  @apply bg-light-green;
+}
+.dayCustomStyle span:nth-child(odd) {
+  @apply bg-gray-100;
+}
