--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css');
-
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -95,10 +101,20 @@
 
 .customSelect {
   position: relative;
-  background: red;
 }
+/* .customSelect {
+  position: absolute;
+  width: 224px;
+} */
 .customSelect::before {
   font-family: 'Font Awesome 6 Free';
-  @apply text-sm text-white absolute top-1/4 left-1;
+  @apply text-sm absolute top-1/4 left-1;
   content: '\f00c';
+  display: block;
+}
+.customSelect::after {
+  font-family: 'Font Awesome 6 Free';
+  @apply text-sm absolute top-1/4 right-3;
+  content: '\f0d7';
+  display: block;
 }
