--- a/src/index.css
+++ b/src/index.css
@@ -143,37 +143,37 @@
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
-  @apply bg-light-green;
+  @apply bg-light-green rounded-full;
 }
 
 .react-calendar__tile--now {
-  @apply bg-green-400 text-white;
+  @apply bg-primary-color text-white rounded-full;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  @apply bg-primary-color;
+  @apply bg-green-400 rounded-full;
 }
 .react-calendar__tile--hasActive {
-  @apply bg-primary-color text-white;
+  @apply bg-primary-color text-white rounded-full;
 }
 
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
-  @apply bg-green-400;
+  @apply bg-green-400 rounded-full;
 }
 
 .react-calendar__tile--active {
-  @apply bg-primary-color text-white;
+  @apply bg-primary-color text-white rounded-full;
 }
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  @apply bg-green-400;
+  @apply bg-green-400 rounded-full;
 }
 
 .react-calendar--selectRange .react-calendar__tile--hover {
-  @apply bg-light-green;
+  @apply bg-light-green rounded-full;
 }
 
 .react-calendar__viewContainer {
@@ -183,4 +183,5 @@
 .react-calendar__decade-view .react-calendar__tile,
 .react-calendar__century-view .react-calendar__tile {
   padding: 1.4em 0.5em;
+  border-radius: 100%;
 }
