Determined the Minimum date to be displayed on the custom react-calendar

--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,7 @@
   border-radius: 100%;
 }
 .react-calendar__navigation button:disabled {
-  @apply hidden;
+  @apply bg-light-green;
 }
 
 .react-calendar__tile:disabled {
